--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "c4c",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://code-4-change.com",
   "dependencies": {
     "@artsy/fresnel": "^7.1.4",
     "@szhsin/react-accordion": "^1.2.4",
@@ -24,7 +25,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -43,5 +46,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.1.1"
   }
 }
